remove workspace relation
- cleanup notification
- decouple services from workspace
- decouple wiki from workspace
- cutoff workspace member finder
- cutoff workspace from project
- remove workspace related logic from signup
- cutoff workspace member FK from project member
- add super admin role
- remove workspace related tests
- make issuetype/workflow global
- update api docs